=== 1.0.0 / 2014-01-15

* New method: all (Output all available information)
* Rename platform to ruby_platform
* Rename environment to env
* Add signals and system_call_errors (Signal.list and Errno.constants)
* Add script_lines (SCRIPT_LINES__)
* Add encodings and encoding_aliases (Encoding.name_list and Encoding.aliases)
* Add gc (GC.stat)
* Add user_home (Dir.home)
* Add ruby_revision and ruby_copyright (RUBY_REVISION and RUBY_COPYRIGHT)
* Add verbose and debug ($VERBOSE and $DEBUG)
* Moved from zucker 13.1 gem into its own gem
